# dma-deploy-kit

./: .env.example  .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml
config/: client.example.yaml
docs/: decisions.md  deployment.md
docs/case-studies/: README.md
evals/: compare_runs.py  judge_checks.py  latency_checks.py  run_fixtures.py  run_judge.py  run_latency.py  run_static.py  run_transcripts.py  runlog.py  static_checks.py  transcript_checks.py
evals/fixtures/: clean_booking_en.json  clean_booking_es.json  forbidden_phrase_en.json  greeting_language_mismatch_en.json  greeting_language_mismatch_es.json  greeting_language_ok_es.json  human_claim_en.json  latency_e2e_p90_breach.json  latency_missing_data.json  latency_within_budget.json  multi_violation_en.json  sms_promise_no_consent_en.json  sms_promise_with_consent_en.json
scripts/: capture_retell.py  deploy_client.py  fetch_calls.py  render_prompt.py  report_capture.py  report_prompt_structure.py  run_webhook.py  validate_reexpression.py
src/dma_deploy_kit/agent/: __init__.py  constants.py  deploy.py  prompt.py
src/dma_deploy_kit/config/: __init__.py  loader.py  models.py
src/dma_deploy_kit/postcall/: __init__.py  alerts.py  lead.py  service.py  signature.py  sms.py
tests/: test_config.py  test_deploy.py  test_evals_compare.py  test_evals_fixtures.py  test_evals_judge.py  test_evals_latency.py  test_evals_runlog.py  test_evals_static.py  test_evals_transcripts.py  test_postcall.py  test_prompt.py  test_smoke.py  test_sms.py
