[project]
name = "dma_deploy_kit"
version = "0.1.0"
description = "Config-driven deployment kit for bilingual AI voice receptionists (Retell + ElevenLabs)."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "httpx",
    "python-dotenv",
    "pydantic>=2",
    "pyyaml",
    "tzdata",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "ruff",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dma_deploy_kit"]

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "W", "UP", "B"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = "-ra"
